@startuml
hide methods

class Company {
    -description
}

class ClinicalTest {
    -labWereCreated
    -internalCode
    -nhsCode
}

class Performance {
    -GraphicsContext graphic
}

class DateTime {
    -date
    -time
}

class PerformanceStore {

}


Company"1" -- "*"ClinicalTest : > performs
ClinicalTest"1" -- "*"Performance : < checks tests
Performance"1..*" -- "1"PerformanceStore : < saves
Performance"1" -- "*"DateTime : > has interval of


@enduml